# cndk8

./: Cargo.toml
.github/workflows/: rust.yml
crates/cndk8-managers/: Cargo.toml
crates/cndk8-managers/src/: second_brain_manager.rs
managers/: Cargo.toml  mod.rs
managers/second_brain/: Cargo.toml
telegram/: Cargo.toml
telegram/src/: main.rs
