[package]
name = "cndk8"
version = "0.1.0"
edition = "2021"
description = "cndk8 is a collection of tools for my Second Brain."
homepage = "https://foursixnine.io/projects/cndk8/"
repository = "https://github.com/foursixnine/cndk8"
keywords = ["bots", "SecondBrain", "teloxide-bots", "telegram"]
categories = ["command-line-utilities"]
license = "GPL-3.0-only"

[lib]
path = "src/lib/mod.rs"

[[bin]]
path = "src/rng.rs"
name = "rng"

[workspace]
name = "cndk8-tools"
members = ["telegram"]
exclude = ["mi_acta_bot", "lab/", "duplicate_detection", "url_manager"]


[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
rand = "0.8.5"
rand_pcg = "0.3.1"
rand_seeder = "0.3.0"
rayon = "1.8.1"
scraper = "0.16.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "postgres", "json"] }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
